--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.visualstudio": "2.0.25",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.tools": "2.2.6",
     "com.unity.netcode.gameobjects": "2.6.0",
     "com.unity.render-pipelines.universal": "17.2.0",
     "com.unity.services.multiplayer": "1.1.8",
